<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/C20"
        android:layout_width="121dp"
        android:layout_height="121dp"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="265dp"
        android:text="@string/button31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/C21"
        android:layout_width="121dp"
        android:layout_height="121dp"
        android:layout_marginStart="145dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="265dp"
        android:text="@string/button32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/C22"
        android:layout_width="121dp"
        android:layout_height="121dp"
        android:layout_marginStart="274dp"
        android:layout_marginLeft="274dp"
        android:layout_marginTop="265dp"
        android:text="@string/button33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/C10"
        android:layout_width="121dp"
        android:layout_height="121dp"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="137dp"
        android:text="@string/button21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/C11"
        android:layout_width="121dp"
        android:layout_height="121dp"
        android:layout_marginStart="145dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="137dp"
        android:text="@string/button22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/C12"
        android:layout_width="121dp"
        android:layout_height="121dp"
        android:layout_marginStart="274dp"
        android:layout_marginLeft="274dp"
        android:layout_marginTop="137dp"
        android:text="@string/button23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/C00"
        android:layout_width="121dp"
        android:layout_height="121dp"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="16dp"
        android:text="@string/button11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/C01"
        android:layout_width="121dp"
        android:layout_height="121dp"
        android:layout_marginStart="145dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="16dp"
        android:text="@string/button12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/C02"
        android:layout_width="121dp"
        android:layout_height="121dp"
        android:layout_marginStart="274dp"
        android:layout_marginLeft="274dp"
        android:layout_marginTop="16dp"
        android:text="@string/button13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/RandButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="153dp"
        android:layout_marginLeft="153dp"
        android:layout_marginTop="509dp"
        android:text="@string/randomize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>